updated the docker file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,11 @@ version: '3.8'
 services:
   rabbitmq:
     image: rabbitmq:3.13-management
+    platform: linux/amd64
     ports:
       - "5672:5672" 
       - "15672:15672"
+    
     healthcheck:
       test: ["CMD", "rabbitmq-diagnostics", "check_port_connectivity"]
       interval: 10s
